--- a/TroK/package.json
+++ b/TroK/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-router-flux": "^4.0.0-beta.22",
     "react-navigation": "^1.0.0-beta.13"
   },
   "devDependencies": {
