--- a/TroK/package.json
+++ b/TroK/package.json
@@ -11,7 +11,9 @@
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-router-flux": "^4.0.0-beta.22",
-    "react-navigation": "^1.0.0-beta.13"
+    "react-navigation": "^1.0.0-beta.13",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
