--- a/TroK/package.json
+++ b/TroK/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "base-64": "^0.1.0",
     "firebase": "^4.6.0",
     "react": "16.0.0-beta.5",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "21.2.1",
