--- a/TroK/package.json
+++ b/TroK/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.17.0",
     "base-64": "^0.1.0",
     "firebase": "^4.6.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-router-flux": "^4.0.0-beta.22",
